Uploaded image for project: 'Apache Arrow'
  1. Apache Arrow
  2. ARROW-9943

[C++] Arrow metadata not applied recursively when reading Parquet file

Details

    • Bug
    • Status: Resolved
    • Major
    • Resolution: Fixed
    • 1.0.0
    • 2.0.0
    • C++

    Description

      Currently, ApplyOriginalMetadata in src/parquet/arrow/schema.cc is only applied for the top-level node of each schema field. Nested metadata (such as dicts-inside-lists, etc.) will not be applied.

      Attachments

        Issue Links

          Activity

            People

              apitrou Antoine Pitrou
              apitrou Antoine Pitrou
              Votes:
              0 Vote for this issue
              Watchers:
              4 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0h
                  0h
                  Logged:
                  Time Spent - 3h 20m
                  3h 20m

                  Slack

                    Issue deployment