ARROW-9943: [C++] Recursively apply Arrow metadata when reading from Parquet

This allows roundtripping complex types such as `list<dictionary<utf8>>`, `list<extension>`, etc.